<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.unam.moviles.generadordecurp.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Text 1"
                    style="@style/etData"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Text 2"
                    style="@style/etData"/>
            </LinearLayout>

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/strHintName"
                style="@style/etData"/>
            <EditText
                android:id="@+id/etFirstLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/strHintFirstLastName"
                style="@style/etData"/>
            <EditText
                android:id="@+id/etSecondtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/strHintSecondLastName"
                style="@style/etData"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strTvBirthday"
                style="@style/tvSubTitle"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rowCount="3"
                android:columnCount="2">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tvDay"
                    android:layout_row="0"
                    android:layout_column="0"
                    style="@style/tvField"/>
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tvMounth"
                    android:layout_row="1"
                    android:layout_column="0"
                    style="@style/tvField"/>
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tvYear"
                    android:layout_row="2"
                    android:layout_column="0"
                    style="@style/tvField"/>


                <Spinner
                    android:id="@+id/spnDay"
                    android:layout_width="200dp"
                    android:layout_row="0"
                    android:layout_column="1"/>

                <Spinner
                    android:id="@+id/spnMonth"
                    android:layout_width="200dp"
                    android:layout_row="1"
                    android:layout_column="1"/>

                <Spinner
                    android:id="@+id/spnYear"
                    android:layout_width="200dp"
                    android:layout_row="2"
                    android:layout_column="1"/>
            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/etGenero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/strGenero"
                    style="@style/tvSubTitle"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    style="@style/etData">
                    <RadioButton
                        android:id="@+id/rbMan"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/strRb1"
                        style="@style/rbSex"/>

                    <RadioButton
                        android:id="@+id/rbWoman"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/strRb2"
                        style="@style/rbSex"/>
                </RadioGroup>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="bottom">

                <Button
                    android:id="@+id/btnGenerateCurp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:text="@string/btnGenerate"
                    android:textSize="18dp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
